--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,11 @@
+a {
+	color :black;
+	text-decoration: none !important;
+}
+
+a:hover {
+	color : #ee6e73
+}
 .lds-dual-ring {
   display: flex;
   justify-content: center;
